<resources>
    <string name="app_name">SelfSufficient</string>
    <string name="shared_preferences">com.acdos.comp41690.preferences</string>
    <string name="title_activity_setup">SetupActivity</string>
    <string name="setup">Welcome to SelfSufficient</string>
    <string name="start_screen">Default start screen...</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SelfSufficient</string>
    <string name="nav_header_subtitle">Promoting sustainable usage</string>
    <string name="nav_header_desc"> </string>
    <string name="action_settings">Settings</string>
    <string name="share">Share</string>
    <string name="menu_home">Home</string>
    <string name="menu_rain">Rain</string>
    <string name="menu_solar">Solar</string>
    <string name="menu_settings">Settings</string>
    <string name="setup_message">Since this is your first time, let\'s get set up!</string>
    <string name="continue_button_label">Continue</string>
    <string name="roof_area_question">Do you know your harvestable roof area?</string>
    <string name="onboarding_question">Select which features you wish to set up</string>
    <string name="own_water_tank_question">Do you already own a water tank?</string>
    <string name="question_no">No</string>
    <string name="question_yes">Yes</string>
    <string name="solar_panel_output_hint">Solar panel output</string>
    <string name="kw_h_rate_hint">kW/h rate</string>
    <string name="skip_button_label">skip</string>
    <string name="submit_button_label">Submit</string>
    <string name="harvestable_roof_area_hint">Harvestable roof area</string>
    <string name="water_usage_hint">Weekly water usage in litres</string>
    <string name="water_rainfall_formula_label">5% of annual rainfall</string>
    <string name="water_usage_formula_label">5 weeks water usage</string>
    <string-array name="unit_types">
        <item>Litres</item>
        <item>Cubic metres</item>
        <item>Gallons</item>
    </string-array>

    <string name="roof_area">0</string>

    <string name="empty">No articles available, try again later.</string>
    <string name="no_connection">You have no internet connection.</string>
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">Settings</string>

    <string name="settings_num_articles_label">Number of articles</string>
    <string name="settings_num_articles_key" translatable="false">num_articles</string>
    <string name="settings_num_articles_default" translatable="false">10</string>

    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_newest_value</string>

    <string name="settings_order_by_newest_label">Newest</string>
    <string name="settings_order_by_newest_value" translatable="false">newest</string>

    <string name="settings_order_by_oldest_label">Oldest</string>
    <string name="settings_order_by_oldest_value" translatable="false">oldest</string>

    <string name="settings_order_by_relevance_label">Relevance</string>
    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>

    <string-array name="settings_order_by_labels">
        <item>@string/settings_order_by_newest_label</item>
        <item>@string/settings_order_by_oldest_label</item>
        <item>@string/settings_order_by_relevance_label</item>
    </string-array>

    <string-array name="settings_order_by_values">
        <item>@string/settings_order_by_newest_value</item>
        <item>@string/settings_order_by_oldest_value</item>
        <item>@string/settings_order_by_relevance_value</item>
    </string-array>

    <string name="dialog_enter_output">Enter Output</string>
    <string name="dialog_enter_usage">Enter Usage</string>
    <string name="dialog_input_data">Input</string>
    <string name="dialog_title">Solar Input</string>
    <string name="dialog_positive_button">Enter</string>
    <string name="dialog_negative_button">Cancel</string>
    <string name="volume_litres">Volume (litres)</string>
    <string name="tank_size_calculator">Tank Size Calculator</string>
    <string name="roof_area_input">Roof Area in metres squared</string>
    <string name="water_usage_input_dialog">Enter Water Usage in Litres</string>
    <string name="setup_end_text">Thank you! The app is now set up.</string>
    <string name="email_mesage"><![CDATA[Hey! I\'m now using SelfSufficient! Its a new sustainable energy & water app and is helping me collect rainwater! Try it out: https://play.google.com/selfsufficient]]></string>
    <string name="water_input">Water Input</string>
    <string name="enter_tank_size">Enter Tank Size</string>
    <string name="enter_volume">Enter Volume</string>
    <string name="set_location">Set location</string>
    <string name="setup_location_question_text">We need your location so we know the weather conditions for your home. Click Set Location, and tap to place a pin in the map.</string>
    <string name="setup_location_image_description">picture of house</string>
    <string name="add_water">Add Water</string>
    <string name="subtract_water">Subtract Water</string>
</resources>
