<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.help.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.help.ui.rain.RainFragment"
        android:label="@string/menu_rain"
        tools:layout="@layout/fragment_rain" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.help.ui.solar.SolarFragment"
        android:label="@string/menu_solar"
        tools:layout="@layout/fragment_solar" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.help.ui.refactor.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>