<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_nav_settings"
    app:startDestination="@+id/nav_settings">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.acdos.comp41690.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_rain"
        android:name="com.acdos.comp41690.ui.rain.RainViewFragment"
        android:label="@string/menu_rain"
        tools:layout="@layout/fragment_rain" />

    <fragment
        android:id="@+id/nav_solar"
        android:name="com.acdos.comp41690.ui.solar.ElecViewFragment"
        android:label="@string/menu_solar"
        tools:layout="@layout/fragment_solar" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.acdos.comp41690.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>