<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        android:text="@string/dialog_positive_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dataInputField"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="13dp"
        android:text="@string/dialog_negative_button"
        app:layout_constraintEnd_toStartOf="@+id/submitButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dataInputField" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="204dp"
        android:layout_height="58dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="35dp"
        android:checkedButton="@+id/usageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/usageButton"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/dialog_enter_usage" />

        <RadioButton
            android:id="@+id/outputButton"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/dialog_enter_output" />
    </RadioGroup>

    <EditText
        android:id="@+id/dataInputField"
        android:layout_width="204dp"
        android:layout_height="42dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="35dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:digits="1234567890."
        android:hint="@string/dialog_input_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/Title"
        android:layout_width="199dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="35dp"
        android:text="@string/dialog_title"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>