<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >


    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitButton"
        android:layout_width="240dp"
        android:layout_height="56dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="112dp"
        android:text="@string/submit_button_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/skipButton"
        android:layout_width="70dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/skip_button_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/solar_panel_output"
        android:layout_width="184dp"
        android:layout_height="45dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="112dp"
        android:digits="123456789."
        android:ems="10"
        android:hint="@string/solar_panel_output_hint"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/kwh_rate"
        android:layout_width="184dp"
        android:layout_height="45dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="224dp"
        android:layout_marginEnd="150dp"
        android:digits="123456789."
        android:ems="10"
        android:hint="@string/kw_h_rate_hint"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>