<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/set_location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:onClick="onContinueButtonClick"
        android:text="@string/set_location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_text" />

    <TextView
        android:id="@+id/question_text"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginHorizontal="20dp"
        android:paddingHorizontal="20dp"
        android:text="@string/setup_location_question_text"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_image" />

    <ImageView
        android:id="@+id/question_image"
        android:layout_width="324dp"
        android:layout_height="369dp"
        android:layout_marginStart="142dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="142dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/house"
        app:layout_constraintBottom_toTopOf="@+id/question_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/setup_location_image_description" />
</androidx.constraintlayout.widget.ConstraintLayout>