<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    <PreferenceCategory-->
<!--        app:key="water_category"-->
<!--        app:title="Water">-->
        <PreferenceCategory
            app:key="general_category"
            app:title="General">

                <SwitchPreferenceCompat
                    app:key="notifications"
                    app:title="Enable message notifications"/>

                <EditTextPreference
                    app:key="roof_areaa"
                    app:useSimpleSummaryProvider="true"
                    app:title="Roof area" />

<!--                <EditTextPreference-->
<!--                    app:key="water_tank_size"-->
<!--                    app:useSimpleSummaryProvider="true"-->
<!--                    app:title="Water tank size" />-->
        </PreferenceCategory>

        <PreferenceCategory
            app:key="water_category"
            app:title="Water">
                <ListPreference
                    app:defaultValue="@string/settings_order_by_default"
                    app:entries="@array/settings_order_by_labels"
                    app:entryValues="@array/settings_order_by_values"
                    app:useSimpleSummaryProvider="true"
                    app:key="@string/settings_order_by_key"
                    app:title="@string/settings_order_by_label" />
        </PreferenceCategory>

        <PreferenceCategory
            app:key="solar_category"
            app:title="Solar category">
                <ListPreference
                    app:defaultValue="@string/settings_order_by_default"
                    app:entries="@array/settings_order_by_labels"
                    app:entryValues="@array/settings_order_by_values"
                    app:useSimpleSummaryProvider="true"
                    app:key="@string/settings_order_by_key"
                    app:title="@string/settings_order_by_label" />
        </PreferenceCategory>

<!--    </PreferenceCategory>-->

<!--    <PreferenceCategory-->
<!--        app:key="solar_category"-->
<!--        app:title="Solar">-->

<!--        <EditTextPreference-->
<!--        app:key="solar_panel_output"-->
<!--        app:useSimpleSummaryProvider="true"-->
<!--        app:title="Solar panel output" />-->

<!--        <EditTextPreference-->
<!--            app:key="kwh_rate"-->
<!--            app:useSimpleSummaryProvider="true"-->
<!--            app:title="KW/h rate" />-->
<!--    </PreferenceCategory>-->
</PreferenceScreen>